--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "format": "prettier --write 'src/**/*.{ts,tsx,js,jsx}'"
   },
   "dependencies": {
-    "hono": "^4.6.12"
+    "hono": "^4.6.12",
+    "nanoid": "^5.0.9"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241112.0",
